refactor: Remove unused local variables & cleanup
cleanups:
- make fields static
- remove explicit type arguments where not needed